test/invalid/idl/nonempty-sequence.webidl
dictionary X {
  sequence<short> myfield = [3];
};
